# turtlebot_controller

./: .gitignore  consensus.sh  copy_code.sh  end_node.sh  readme.md  remote_launch.sh  start_mocap.sh  start_node.sh  test_node.sh  test_remote_launch.sh
Config/: Example_Config.yaml
Replayer/: Example.turtleReplay  FormationDistanceGraph.py  Pretty_JSON.json  test_graph.py  (+2 more)
src/agent_control/: CMakeLists.txt  package.xml  readme.md  setup.py
src/agent_control/agent_control/: CPIH.py  LF_formation.py  LF_formation_old.py  LF_multi_formation.py  Path_Test.py  TukeyMedian.py  __init__.py  agent.py  agent_setup.yaml  calibration.py  consensus.py  coverage.py  followMe_triangle.py  path_plan.py  path_plan2.py  start_point.py  testme.py  viewer_agent.py
src/agent_control/config/: consensus_config.yaml
src/agent_control/config/5_agent_formation/: pentagon_setup.yaml
src/agent_control/config/CiRENS_formation/: agent_setup(1).yaml  agent_setup(2).yaml  agent_setup(3).yaml  agent_setup(4).yaml  agent_setup(5).yaml  agent_setup(6).yaml
src/agent_control/config/agent_setup/: agent_setup (hexagon).yaml  agent_setup(E).yaml  agent_setup(N).yaml  agent_setup(R).yaml  agent_setup(S).yaml  agent_setup(i).yaml  agent_setup.yaml  agent_setup_Large.yaml  nine_node_formation.yaml
src/agent_control/config/goals/: agent_goal(7).yaml  agent_goals.yaml
src/agent_control/config/shapes/: agent_setup(1).yaml  agent_setup(2).yaml  agent_setup(3).yaml  agent_setup(4).yaml
src/agent_control/launch/: consensus_batch.launch.py  lf_formation.launch.py  mult_lf_formation.launch.py
(+68 files in other folders)
